# hide-overlays

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
overlay_css/: __init__.py  selectors.yaml
tests/: test_hide_overlays.py
