[project]
# ── EDIT BEFORE PUBLISHING ───────────────────────────────────────────────────
name = "hide-overlays"          # PyPI package name — must be unique on pypi.org
version = "1.0.0"
description = "Curated CSS selectors to hide cookie banners, chat widgets, and accessibility overlays before web capture"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "Suyog Kurlekar", email = "skgaming7869@gmail.com" },
]
keywords = [
    "playwright", "selenium", "scraping", "css",
    "cookie-banner", "overlay", "web-capture", "screenshot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage    = "https://github.com/ctrl07/hide-overlays"   # ← EDIT: your repo URL
Repository  = "https://github.com/ctrl07/hide-overlays"   # ← EDIT: your repo URL
"Bug Tracker" = "https://github.com/ctrl07/hide-overlays/issues"  # ← EDIT

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["overlay_css"]
